# ai-knowledge-base

./: .env.example  .gitignore  README.md  README_CN.md  pyproject.toml
.github/workflows/: daily-collect.yml
app/: main.py
app/agent/: __init__.py  analyzer.py  models.py  scorer.py
app/api/: routes.py
app/crawler/: __init__.py  github_trending.py
app/review/: __init__.py  manager.py  models.py
app/storage/: __init__.py  models.py  version_mgr.py  writer.py
knowledge/: BasedHardware-omi_7.5_2026-04-19.md  BasedHardware-omi_8.0_2026-04-19.md  EvoMap-evolver_7.2_2026-04-19.md  index.md  multica-ai-andrej-karpathy-skills_8.0_2026-04-19.md  openai-openai-agents-python_9.0_2026-04-19.md
knowledge/2026-04-19/: BasedHardware-omi_8.0_2026-04-19.md  EvoMap-evolver_7.0_2026-04-19.md  NousResearch-hermes-agent_8.8_2026-04-19.md  NousResearch-hermes-agent_9.0_2026-04-19.md  OpenBMB-VoxCPM_8.6_2026-04-19.md  addyosmani-agent-skills_8.3_2026-04-19.md  coleam00-Archon_8.5_2026-04-19.md  deepseek-ai-DeepGEMM_8.5_2026-04-19.md  deepseek-ai-DeepGEMM_9.0_2026-04-19.md  lsdefine-GenericAgent_7.8_2026-04-19.md  multica-ai-andrej-karpathy-skills_7.2_2026-04-19.md  multica-ai-multica_8.5_2026-04-19.md  openai-openai-agents-python_9.0_2026-04-19.md  shiyu-coder-Kronos_8.5_2026-04-19.md  thedotmack-claude-mem_9.0_2026-04-19.md  thunderbird-thunderbolt_6.7_2026-04-19.md  thunderbird-thunderbolt_7.3_2026-04-19.md  virattt-ai-hedge-fund_7.8_2026-04-19.md
knowledge/2026-04-20/: BasedHardware-omi_8.3_2026-04-20.md  (+13 more)
templates/: index.html  project.html  review.html
(+190 files in other folders)
