[project]
name = "ai-knowledge-base"
version = "1.0.0"
description = "AI知识库Agent - 自动抓取GitHub Trending AI项目并进行智能分析评分"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "jinja2>=3.1",
    "apscheduler>=3.10",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.scripts]
akb = "app.main:cli"
